cmake_minimum_required(VERSION 2.8)

project(CppPhoenixChannels)
set (CMAKE_CXX_STANDARD 11)
set (CMAKE_VERBOSE_MAKEFILE ON)
set(HEADERS channel.h socket.h push.h phoenix.h)
set(SOURCES channel.cpp  socket.cpp  push.cpp channel_message.cpp examples/main.cpp)
add_executable(${PROJECT_NAME} ${SOURCES})
target_include_directories(${PROJECT_NAME} PRIVATE "./websocketpp")
FIND_PACKAGE(OpenSSL)
set( BOOST_ROOT "/opt/boost_1_72_0/build" CACHE PATH "Boost library path" )
set( Boost_NO_SYSTEM_PATHS on CACHE BOOL "Do not search system for Boost" )
FIND_PACKAGE( Boost COMPONENTS thread system REQUIRED )
TARGET_LINK_LIBRARIES( ${PROJECT_NAME} LINK_PUBLIC ${Boost_LIBRARIES} -lpthread )
TARGET_LINK_LIBRARIES (${PROJECT_NAME} ${OPENSSL_SSL_LIBRARY} ${OPENSSL_CRYPTO_LIBRARY})

